ko/15.7/admin/synonym-guide.rst
========
동의어 사전
========

개요
====

의미가 같은 단어(GB, gigabyte 등)의 동의어를 관리할 수 있습니다.

동의어란 표기는 다르지만 의미가 같은(또는 비슷한) 단어를 말합니다. 예를 들어 "GB"와 "기가바이트", "PC"와 "컴퓨터", "TV"와 "텔레비전" 등이 동의어(유의어)에 해당합니다.
|Fess| 의 동의어 사전에 등록해 두면 두 단어 중 하나로 검색했을 때 동의어로 등록한 다른 단어를 포함하는 문서도 검색 결과에 포함시킬 수 있습니다.
이를 통해 표기 차이로 인한 검색 누락을 방지하고 검색 적중률을 높일 수 있습니다.

관리 방법
======

표시 방법
------

아래 그림의 동의어 설정 목록 페이지를 열려면 왼쪽 메뉴의 [시스템 > 사전]을 선택한 후 synonym을 클릭합니다.

|image0|

편집하려면 설정 이름을 클릭합니다.

설정 방법
------

동의어 설정 페이지를 열려면 신규 생성 버튼을 클릭합니다.

|image1|

설정 항목
------

인덱스 작성에 관하여 표준 설정은 bi-gram이므로 변환 후의 단어가 1자가 되지 않도록 등록해야 합니다.
또한 동의어 등록 시 다음과 같이 등록해야 합니다.

* 히라가나는 가타카나로 등록
* 소문자 가타카나는 대문자 가타카나로 등록
* 전각 영숫자는 반각 영숫자로 등록
* 동의어는 중복 등록하지 않음

변환원
:::::

동의어로 취급할 대상 단어를 입력합니다.

변환후
:::::

변환원에서 입력한 단어를 변환 후 단어로 전개합니다.
예를 들어 "TV"를 "TV"와 "테레비"로 취급하려는 경우 변환원에 "TV"를 입력하고 변환후에 "TV"와 "テレビ"를 입력합니다.

다운로드
=========

Apache Lucene이 제공하는 동의어 사전 형식으로 다운로드할 수 있습니다.

업로드
=========

Apache Lucene이 제공하는 동의어 사전 형식으로 업로드할 수 있습니다.
동의어는 특정 단어군을 다른 단어군으로 치환하는 것이므로 사전 기술에서는 쉼표(,)와 변환(=>)을 사용합니다.
예를 들어 "TV"를 "テレビ"로 치환하는 경우 =>를 사용하여 다음과 같이 기술합니다.

::

    TV=>テレビ

"fess"와 "フェス"를 동일한 것으로 취급하는 경우 다음과 같이 기술합니다.

::

    fess,フエス=>fess,フエス

위와 같은 경우 =>를 생략하여 다음과 같이 기술할 수도 있습니다.

::

    fess,フエス


관련 항목
============

- :doc:`../user/search-or` - OR 검색
- :doc:`../user/search-field` - 필드 지정 검색
- :doc:`dict-guide` - 사전 관리 개요


.. |image0| image:: ../../../resources/images/en/15.7/admin/synonym-1.png
.. |image1| image:: ../../../resources/images/en/15.7/admin/synonym-2.png
